// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`availability-bar-filters Renders \`availability-bar-filters\` with custom props 1`] = `
<div
  class="layout availability-bar-filters gap-6 wrap"
>
  <c-quick-date-interval-field-stub
    class="availability-bar-filters__interval"
    interval="[object Object]"
    min="1000000000"
    quick-ranges="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    short=""
  />
  <c-availability-show-type-field-stub
    class="availability-bar-filters__show-type"
    label="Show"
    value="1"
  />
</div>
`;

exports[`availability-bar-filters Renders \`availability-bar-filters\` with default props 1`] = `
<div
  class="layout availability-bar-filters gap-6 wrap"
>
  <c-quick-date-interval-field-stub
    class="availability-bar-filters__interval"
    quick-ranges="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    short=""
  />
  <c-availability-show-type-field-stub
    class="availability-bar-filters__show-type"
    label="Show"
  />
</div>
`;
